# next-bazel-example

./: BUILD.bazel  README.md  WORKSPACE  package.json
next-site/: .eslintrc.js  BUILD.bazel  next.config.js
next-site/public/: styles.css
next-site/src/components/: layout.tsx
next-site/src/pages/: _app.tsx  _document.js  index.tsx
